--- a/resource/package.json
+++ b/resource/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formio-resource",
-  "version": "3.23.0",
+  "version": "",
   "repository": {
     "type": "git",
     "url": "https://github.com/formio/angular-formio"
@@ -20,18 +20,6 @@
   "module": "index.js",
   "jsnext:main": "index.js",
   "typings": "index.d.ts",
-  "peerDependencies": {
-  "@angular/core": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
-  "@angular/common": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
-  "@angular/forms": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
-  "@angular/router": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
-  "rxjs": "^5.0.0 || ^6.0.0",
-  "zone.js": "^0.8.0"
-},
-  "dependencies": {
-  "core-js": "^3.1.4",
-  "formiojs": "^3.22.12",
-  "lodash": "^4.17.11",
-  "ngx-bootstrap": "^5.0.0"
-}
+  "peerDependencies": {},
+  "dependencies": {}
 }
