--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-formio",
-  "version": "4.0.2",
+  "version": "4.2.0-rc.6",
   "repository": {
     "type": "git",
     "url": "https://github.com/formio/angular-formio"
@@ -36,8 +36,8 @@
 },
   "dependencies": {
   "core-js": "^3.2.1",
-  "formiojs": "^4.0.6",
+  "formiojs": "^4.2.0-rc.5",
   "lodash": "^4.17.15",
-  "ngx-bootstrap": "^5.1.1"
+  "ngx-bootstrap": "^5.1.2"
 }
 }
