--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 },
   "dependencies": {
   "core-js": "^3.2.1",
-  "formiojs": "^4.2.0-rc.5",
+  "formiojs": "git+https://git@github.com/merobal/formio.js.git#types",
   "lodash": "^4.17.15",
   "ngx-bootstrap": "^5.1.2"
 }
