--- a/auth/package.json
+++ b/auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formio-manager",
-  "version": "4.2.0-rc.10",
+  "version": "4.2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/formio/angular-formio"
@@ -31,7 +31,7 @@
 },
   "dependencies": {
   "core-js": "^3.2.1",
-  "formiojs": "^4.2.0-rc.8",
+  "formiojs": "^4.2.1",
   "lodash": "^4.17.15",
   "ngx-bootstrap": "^5.1.2"
 }
