--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-formio",
-  "version": "4.2.4",
+  "version": "4.2.5",
   "repository": {
     "type": "git",
     "url": "https://github.com/formio/angular-formio"
@@ -36,7 +36,7 @@
 },
   "dependencies": {
   "core-js": "^3.2.1",
-  "formiojs": "git+https://git@github.com/merobal/formio-js-deploy.git",
+  "formiojs": "^4.3.2",
   "lodash": "^4.17.15",
   "ngx-bootstrap": "^5.1.2"
 }
