--- a/resource/package.json
+++ b/resource/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formio-resource",
-  "version": "4.2.6",
+  "version": "4.3.0-beta.1",
   "repository": {
     "type": "git",
     "url": "https://github.com/formio/angular-formio"
@@ -31,7 +31,7 @@
 },
   "dependencies": {
   "core-js": "^3.2.1",
-  "formiojs": "^4.3.3",
+  "formiojs": "git+https://git@github.com/merobal/formio-js-deploy.git",
   "lodash": "^4.17.15",
   "ngx-bootstrap": "^5.1.2"
 }
