--- a/auth/package.json
+++ b/auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formio-manager",
-  "version": "4.3.0-beta.1",
+  "version": "4.3.0-beta.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/formio/angular-formio"
@@ -30,9 +30,9 @@
   "zone.js": "^0.8.0"
 },
   "dependencies": {
-  "core-js": "^3.2.1",
-  "formiojs": "git+https://git@github.com/merobal/formio-js-deploy.git",
+  "core-js": "^3.3.3",
+  "formiojs": "^4.5.0",
   "lodash": "^4.17.15",
-  "ngx-bootstrap": "^5.1.2"
+  "ngx-bootstrap": "^5.2.0"
 }
 }
