--- a/resource/package.json
+++ b/resource/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formio-resource",
-  "version": "4.3.0-beta.3",
+  "version": "4.3.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/formio/angular-formio"
@@ -23,15 +23,15 @@
   "peerDependencies": {
   "@angular/core": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
   "@angular/common": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
-  "@angular/elements": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
   "@angular/forms": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
   "@angular/router": "^4.0.0 || ^5.0.0 || ^6.0.0 || ^7.0.0 || ^8.0.0",
   "rxjs": "^5.0.0 || ^6.0.0",
   "zone.js": "^0.8.0"
 },
   "dependencies": {
-  "core-js": "^3.3.4",
-  "formiojs": "^4.6.0",
+  "@angular/elements": "^8.2.13",
+  "core-js": "^3.3.6",
+  "formiojs": "^4.7.3",
   "lodash": "^4.17.15",
   "ngx-bootstrap": "^5.2.0"
 }
