--- a/grid/package.json
+++ b/grid/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formio-grid",
-  "version": "4.3.0",
+  "version": "4.3.2",
   "repository": {
     "type": "git",
     "url": "https://github.com/formio/angular-formio"
@@ -29,9 +29,9 @@
   "zone.js": "^0.8.0"
 },
   "dependencies": {
-  "@angular/elements": "^8.2.13",
-  "core-js": "^3.3.6",
-  "formiojs": "4.6.4",
+  "@angular/elements": "^8.2.14",
+  "core-js": "^3.4.1",
+  "formiojs": "^4.7.6",
   "lodash": "^4.17.15",
   "ngx-bootstrap": "^5.2.0"
 }
