--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-formio",
-  "version": "4.6.21",
+  "version": "4.8.0-beta.6",
   "repository": {
     "type": "git",
     "url": "https://github.com/formio/angular-formio"
@@ -35,9 +35,9 @@
   "zone.js": "^0.8.0"
 },
   "dependencies": {
-  "core-js": "^3.6.4",
-  "formiojs": "4.7.8",
+  "core-js": "^3.6.5",
+  "formiojs": "^4.10.0-beta.16",
   "lodash": "^4.17.15",
-  "ngx-bootstrap": "^5.5.0"
+  "ngx-bootstrap": "^5.6.1"
 }
 }
